# handbag

./: .travis.yml
ci/linux/: before_install.sh  build.sh  test.sh
handbag/: .bazelrc  .gitignore  .ycm_extra_conf.py  WORKSPACE
handbag/lib/cpp/executor/: BUILD  BUILD.bazel  cpu.cpp  cpu.h  executor.cpp  executor.h
handbag/lib/cpp/executor/internal/: executor.cpp  executor.h
handbag/lib/cpp/fluent/: BUILD  BUILD.bazel  fluent.h  fluent_test.cpp
handbag/lib/cpp/fluent/internal/: BUILD  fluent.cpp  fluent.h
handbag/lib/cpp/fluent/test/: BUILD  test.cpp
handbag/lib/cpp/io/: BUILD  fwd.cpp  fwd.h  input.cpp  input.h  input_memory.cpp  input_memory.h  input_memory_test.cpp  input_std_istream.cpp
handbag/lib/cpp/io/internal/: BUILD  input_memory.cpp  input_memory.h  input_std_istream.cpp  input_std_istream.h
handbag/lib/cpp/macro/: BUILD.bazel  util.h  va_args.cpp  va_args.h
handbag/lib/cpp/macro/test/: BUILD  test.cpp
handbag/lib/cpp/repr/: BUILD  repr.cpp  repr.h
handbag/lib/cpp/singleton/: BUILD  fwd.cpp  fwd.h  singleton.cpp  singleton.h
handbag/lib/cpp/singleton/bench/: BUILD  singleton_benchmark.cpp
handbag/lib/cpp/singleton/internal/: singleton.cpp  singleton.h
handbag/lib/cpp/singleton/test/: BUILD  singleton_test.cpp
handbag/lib/cpp/start_stop/: BUILD  BUILD.bazel  start_stop.cpp  start_stop.h  state.cpp  state.h
